*** 20010717_7 by lusky
- check for crypt.h


*** 20010717_6 by bill

 - more warnings being fixed


*** 20010717_5 by lusky
- more warning fixes


*** 20010717_4 by lusky
- fix a warning fix


*** 20010717_3 by lusky
- fixed more warnings


*** 20010717_2 by bill

 - fixed pointless warnings in zlib from showing up


*** 20010717_1 by lusky
massive cleanup of gcc warnings


*** 20010716_3 by leeh
- dont show IPs in stats P either..


*** 20010716_2 by leeh
- this should be extended to ltrace/stats L.. 


*** 20010716_1 by leeh
- dont show ips for servers we're connecting to, or handshaking with
  (reported by cbehrens)


*** 20010715_1 by leeh
- HIDE_SERVERS_IP -> HIDE_SERVERS_IPS
- in get_client_name()

  #ifdef HIDE_SERVERS_IPS
    if(IsServer(client))
      return *MASKED_IP*
  #endif

  this should catch any we missed.. and is about 100 times simpler ;p


*** 20010710_3 by jdc
- Put back HAVE_GETPAGESIZE support.  Accidentally removed during prior
  changes.



*** 20010710_2 by jdc
- More stuff for encrypted link removal.



*** 20010710_1 by jdc
- Complete removal of encrypted link (CRYPTLINK) support; this includes
  RSA authentication.



*** 20010708_4 by db
- reverted KSERVER changes. NOT DISCUSSED, NOT APPROVED



*** 20010708_3 by a1kmm
- The first phase of adding KSERVER.


*** 20010708_2 by a1kmm
- Had better change the path in mkkeypair back...


*** 20010708_1 by a1kmm
- Remove P-lines when they are not in use on rehash.


*** 20010705_5 by greg
- reverted ppath changes .. oops


*** 20010705_4 by wcampbel
Updated the docs for greg's changed...


*** 20010705_3 by db
- added NO_HACK_OPS, don't allow users to hack ops on a channel period.



*** 20010705_2 by greg
- config.h / ircd.c
		made pid file stuffs more multi ircd in same directory
		friendly, at the expense of multiple server with the same
		name.. well.. that's another case entirely.
		anyways, pidfile is now me.name.pid by default, unless
		PPATH is defined.


*** 20010705_1 by db