@@ -5,8 +5,11 @@
 ** md5 patch by Walter Campbell <wcampbel@botbay.net>
 ** Modernization, getopt, etc for the Hybrid IRCD team
 **
-** $Id: mkpasswd.c,v 1.8 2001/07/18 02:20:47 lusky Exp $
+** $Id: mkpasswd.c,v 1.9 2001/07/18 03:10:01 lusky Exp $
 */
+
+#include "setup.h"
+
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
